# shiny-enigma

./: .gitignore  SGD_Clasificadores_Lineales.ipynb  create_notebook.py  pyproject.toml
notebooks/01_clasificadores_lineales/: SGD_Clasificadores_Lineales.ipynb
notebooks/02_redes_neuronales/: Deteccion_Fraude_Red_Neuronal.ipynb  XOR_Red_Neuronal.ipynb
notebooks/03_redes_convolucionales/: hello-cnn.ipynb
notebooks/04_analisis_sentimiento/: _analisis.py  analisis_profundo.md  analisis_sentimiento.ipynb
notebooks/05_embeddings/: Embeddings_Texto_IMDB.ipynb
