[project]
name = "shiny-enigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "polars>=1.0",
    "tensorflow>=2.18",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
    "spacy>=3.8.14",
    "click>=8.4.1",
    "wordcloud>=1.9.6",
    "kaggle>=1.7.0",
    "gensim>=4.3.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "nbformat>=5.10.0",
    "datasets>=3.0.0",
    "nltk>=3.9.0",
]
